--- a/output.css
+++ b/output.css
@@ -535,84 +535,36 @@ video {
   display: grid;
 }
 
-.h-96 {
-  height: 24rem;
-}
-
-.h-\[95px\] {
-  height: 95px;
-}
-
-.h-\[ca\] {
-  height: ca;
-}
-
-.h-\[calc\] {
-  height: calc;
-}
-
-.h-\[calc\(100vh-36px\)\] {
-  height: calc(100vh - 36px);
-}
-
-.h-\[calc\(100v-36px\)\] {
-  height: calc(100v - 36px);
-}
-
-.h-\[calc\(100v\%\/36px\)\] {
-  height: calc(100v%/36px);
-}
-
-.h-\[calc\(100v\%\/5\)\] {
-  height: calc(100v%/5);
-}
-
-.h-\[calc\(100v\%\/6\)\] {
-  height: calc(100v%/6);
-}
-
-.h-\[calc\(100\%\/6\)\] {
-  height: calc(100% / 6);
-}
-
-.h-1\/6 {
-  height: 16.666667%;
-}
-
-.h-\[\] {
-  height: ;
-}
-
-.h-\[calc\(\)\] {
-  height: calc();
-}
-
-.h-\[calc\(384px\/\)\] {
-  height: calc(384px / );
+.h-80 {
+  height: 20rem;
 }
 
 .h-\[calc\(384px\/6\)\] {
   height: calc(384px / 6);
 }
 
-.w-96 {
-  width: 24rem;
+.h-\[calc\(320px\/6\)\] {
+  height: calc(320px / 6);
 }
 
-.w-\[95px\] {
-  width: 95px;
+.h-72 {
+  height: 18rem;
 }
 
-.w-\[calc\(100\%\/6\)\] {
-  width: calc(100% / 6);
+.h-\[calc\(288px\/6\)\] {
+  height: calc(288px / 6);
 }
 
-.w-1\/6 {
-  width: 16.666667%;
+.w-80 {
+  width: 20rem;
 }
 
-.w-\[calc\(384px\/6\)\] {
-  width: calc(384px / 6);
+.w-7 {
+  width: 1.75rem;
+}
+
+.w-72 {
+  width: 18rem;
 }
 
 .cursor-pointer {
@@ -679,4 +631,30 @@ video {
 
 .hover\:opacity-50:hover {
   opacity: 0.5;
+}
+
+@media (min-width: 640px) {
+  .sm\:h-96 {
+    height: 24rem;
+  }
+
+  .sm\:h-\[calc\(384px\/6\)\] {
+    height: calc(384px / 6);
+  }
+
+  .sm\:w-96 {
+    width: 24rem;
+  }
+
+  .sm\:w-\[calc\(384px\/6\)\] {
+    width: calc(384px / 6);
+  }
+
+  .sm\:w-\[calc\(320px\/6\)\] {
+    width: calc(320px / 6);
+  }
+
+  .sm\:w-\[calc\(288px\/6\)\] {
+    width: calc(288px / 6);
+  }
 }
